BackBox-template-new-vnet/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vmName": {
      "type": "string",
      "metadata": {
        "description": "Name of the VM"
      }
    },
    "osType": {
      "type": "string",
      "allowedValues": [
        "Windows",
        "Linux"
      ],
      "metadata": {
        "description": "Type of OS on the existing vhd"
      }
    },
    "osDiskVhdUri": {
      "type": "string",
      "metadata": {
        "description": "Uri of the existing OS VHD in ARM standard or premium storage"
      }
    },
    "vmSize": {
      "type": "string",
      "metadata": {
        "description": "Size of the VM"
      }
    },
  "virtualNetworkName": {
      "type": "string",
      "defaultValue": "BackBox-VNET",
      "metadata": {
          "description": "Enter virtual network name. If you leave this field blank name will be created by the template."
      }
  },
  "addressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
          "description": "Enter virtual network address prefix."
      }
  },
  "subnetName": {
      "type": "string",
      "defaultValue": "Backbox-subnet",
      "metadata": {
          "description": "Enter subnet name."
      }
  },
  "subnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
          "description": "Enter subnet address prefix."
      }
  },
    "resourceGroupName": {
      "type": "string",
      "defaultValue": "backbox-rg",
      "metadata": {
        "description": "Enter resource group name"
      }
    },
    "privateIPAddress": {
      "type": "string",
      "defaultValue": null,
      "metadata": {
        "description": "Enter valid IP address"
      }
    },
    "DiskSizeInGB": {
      "type": "string",
      "defaultValue": "256",
      "metadata": {
        "description": "Enter disk size in GB"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    }
  },
  "variables": {
    "diagStorageAccountName": "[concat('backboxstg', 'diag', substring(uniqueString(resourceGroup().id),0,6))]",
    "publicIPAddressType": "Dynamic",
    "subnetRef": "[resourceId(parameters('resourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'),  parameters('subnetName'))]",
    "nicName": "[concat(parameters('vmName'), '-nic1')]",
    "publicIPAddressName": "[concat(parameters('vmName'), '-pip')]",
    "networkSecurityGroupName": "BackBox-NSG"
  },
  "resources": [
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow_management_inbound",
            "properties": {
              "description": "Allow inbound management traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": ["443", "22"],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
            {
              "name": "allow_management_outbound",
              "properties": {
                "description": "Allow outbound management traffic",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRanges": ["80", "443", "12000"],
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound"
              }
            },
            {
              "name": "allow_misubnet_outbound",
              "properties": {
                "description": "Allow outbound traffic inside the subnet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "[parameters('subnetPrefix')]",
                "access": "Allow",
                "priority": 200,
                "direction": "Outbound"
              }
            },                  
            {
              "name": "deny_all_outbound",
              "properties": {
                "description": "Deny all other outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 4096,
                "direction": "Outbound"
              }
            }
        ]
      }
  },
  {
    "name": "[parameters('virtualNetworkName')]",
    "type": "Microsoft.Network/virtualNetworks",
    "apiVersion": "2018-02-01",
    "dependsOn":[
        "[variables('networkSecurityGroupName')]"
    ],
    "location": "[parameters('location')]",
    "properties": {
        "addressSpace": {
            "addressPrefixes": [
                "[parameters('addressPrefix')]"
            ]
        },
        "subnets": [
            {
                "name": "[parameters('subnetName')]",
                "properties": {
                    "addressPrefix": "[parameters('subnetPrefix')]",
                    "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                    }                            
                }
            }
        ]
    }
},
    {
      "apiVersion": "2018-02-01",
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('diagStorageAccountName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard_LRS"
      },
      "kind": "Storage",
      "properties": {}
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('publicIPAddressName')]",
      "location": "[parameters('location')]",
      "tags": {
        "displayName": "PublicIPAddress"
      },
      "properties": {
        "publicIPAllocationMethod": "[variables('publicIPAddressType')]"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
      ],
      "tags": {
        "displayName": "NetworkInterface"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
		  "privateIPAddress": "[parameters('privateIPAddress')]",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[variables('subnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Compute/disks",
      "apiVersion": "2017-03-30",
      "name": "[concat(parameters('vmName'), '_OSdisk')]",
      "location": "[parameters('location')]",
      "properties": {
        "creationData": {
          "createOption": "Import",
          "sourceUri": "[parameters('osDiskVhdUri')]"
        },
	  "diskSizeGB": "[parameters('DiskSizeInGB')]",
        "osType": "[parameters('osType')]"
      }
    },
    {
      "apiVersion": "2017-03-30",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[parameters('vmName')]",
      "location": "[parameters('location')]",
      "tags": {
        "displayName": "VirtualMachine"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]",
        "[concat(parameters('vmName'), '_OSdisk')]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "storageProfile": {
          "osDisk": {
            "osType": "[parameters('osType')]",
            "caching": "ReadWrite",
            "createOption": "Attach",
            "managedDisk": {
              "id": "[resourceId('Microsoft.Compute/disks', concat(parameters('vmName'), '_OSdisk'))]"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled":  true ,
            "storageUri": "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('diagStorageAccountName')), '2016-01-01').primaryEndpoints.blob)]"
          }
        }
      }
    }
  ]
}
